...
                                        <rect key="frame" x="0.0" y="83" width="414" height="1"/>
                                        <color key="backgroundColor" name="CoreBlue"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="1" id="jwG-Eg-z3K"/>
                                        </constraints>
                                    </view>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sYF-Dk-KYT">
                                        <rect key="frame" x="20" y="33" width="63" height="29"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7t-I3-WL7" customClass="LargeLabel" customModule="CalorieTra
...
            </objects>
            <point key="canvasLocation" x="3100.0000000000005" y="-383.03571428571428"/>
        </scene>
        <!--Trends-->
        <scene sceneID="HfO-kd-txV">
            <objects>
                <viewController title="Trends" id="jgx-y8-7zE" customClass="TrendsViewController" customModule="CalorieTracker" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="ea1-cY-H4z">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="hZg-Ya-fhN">
                                <rect key="frame" x="10" y="98" width="394" height="32"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <segments>
                                    <segment title="7 Days"/>
                                    <segment title="30 Days"/>
                                </segments>
                                <color key="tintColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <color key="selectedSegmentTintColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <connections>
                                    <action selector="trendSelectorTapped:" destination="jgx-y8-7zE" eventType="valueChanged" id="CZH-hU-16w"/>
                                </connections>
...
                                                            <rect key="frame" x="0.0" y="79" width="413" height="1"/>
                                                            <color key="backgroundColor" name="CoreBlue"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="1" id="wU7-Vl-n27"/>
                                                            </constraints>
                                                        </view>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yesterday" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jtl-gb-rJn">
                                                            <rect key="frame" x="4.6666666666666643" y="8" width="68" height="18"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QUh-Rc-Bg8">
...
                            <constraint firstItem="hZg-Ya-fhN" firstAttribute="leading" secondItem="6h5-9s-d7d" secondAttribute="leading" constant="10" id="oXc-zq-GQm"/>
                            <constraint firstItem="g01-Hj-95Y" firstAttribute="leading" secondItem="6h5-9s-d7d" secondAttribute="leading" id="vqd-K5-ACJ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6h5-9s-d7d"/>
                    </view>
                    <navigationItem key="navigationItem" title="Trends" id="kN7-1j-gCo">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="chart" id="J8j-JQ-LkO">
                            <connections>
                                <action selector="chartButtonTapped:" destination="jgx-y8-7zE" id="YqL-HT-24E"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
