...
                            <constraint firstItem="e4v-bj-iKf" firstAttribute="trailing" secondItem="C0a-Md-Z2s" secondAttribute="trailing" id="2Ao-49-3Vx"/>
                            <constraint firstItem="e4v-bj-iKf" firstAttribute="top" secondItem="C0a-Md-Z2s" secondAttribute="top" id="j8v-w0-2Bj"/>
                            <constraint firstAttribute="bottom" secondItem="e4v-bj-iKf" secondAttribute="bottom" constant="20" symbolic="YES" id="jfi-Wq-aiW"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="C0a-Md-Z2s"/>
                    </view>
                    <navigationItem key="navigationItem" title="My Foods" id="91S-1Z-9RN"/>
                    <connections>
                        <outlet property="emptyStateLabel" destination="tPA-lY-Z3v" id="5Fi-pB-Pvh"/>
                        <outlet property="foodsTableView" destination="e4v-bj-iKf" id="prN-Vp-Bb7"/>
                        <segue destination="2tV-Wf-F2X" kind="presentation" identifier="toNewFood" id="KoV-70-S0b"/>
                    </connections>
                </viewController>
...
                                    </imageView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ul5-2m-4xr" customClass="WhiteButton" customModule="CalorieTracker" customModuleProvider="target">
                                        <rect key="frame" x="20" y="218.33333333333331" width="208.33333333333334" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="Gvs-aT-Usk"/>
                                        </constraints>
                                        <state key="normal" title="Add"/>
                                        <connections>
                                            <action selector="addImageButtonTapped:" destination="HLD-Lc-pR1" eventType="touchUpInside" id="Nwr-DQ-vKJ"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
                            </mask>
                        </variation>
                        <connections>
                            <outletCollection property="gestureRecognizers" destination="51j-2n-kx0" appends="YES" id="jpW-o7-WIM"/>
                        </connections>
                    </view>
                    <navigationItem key="navigationItem" title="Add New Food" id="ija-HT-xMa">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="icE-bY-OVC">
                            <connections>
                                <action selector="cancelButtonTapped:" destination="HLD-Lc-pR1" id="hhc-gq-eIv"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Rei-bL-qCe">
...
