...
                                  imageData: (UIImage(named: "image08")?.jpegData(compressionQuality: 10))!,
                                  consumptionDates: Date.randomeDates))
        mockFoods.append(MockFood(name: "Mock Breakfast 9",
                                  calories: randomCalories,
                                  imageData: (UIImage(named: "image09")?.jpegData(compressionQuality: 10))!,
                                  consumptionDates: Date.randomeDates))
        mockFoods.append(MockFood(name: "Mock Breakfast 10",
                                  calories: randomCalories,
                                  imageData: (UIImage(named: "image10")?.jpegData(compressionQuality: 10))!,
                                  consumptionDates: Date.randomeDates))
        mockFoods.append(MockFood(name: "Mock Lunch 1",
                                  calories: randomCalories,
                                  imageData: (UIImage(named: "image11")?.jpegData(compressionQuality: 10))!,
...
                                  imageData: (UIImage(named: "image23")?.jpegData(compressionQuality: 10))!,
                                  consumptionDates: Date.randomeDates))
        mockFoods.append(MockFood(name: "Mock Dinner 4",
                                  calories: randomCalories,
                                  imageData: (UIImage(named: "image24")?.jpegData(compressionQuality: 10))!,
                                  consumptionDates: Date.randomeDates))
        mockFoods.append(MockFood(name: "Mock Dinner 5",
                                  calories: randomCalories,
                                  imageData: (UIImage(named: "image25")?.jpegData(compressionQuality: 10))!,
                                  consumptionDates: Date.randomeDates))
        mockFoods.append(MockFood(name: "Mock Dinner 6",
                                  calories: randomCalories,
                                  imageData: (UIImage(named: "image26")?.jpegData(compressionQuality: 10))!,
...
